--- a/.env.example
+++ b/.env.example
@@ -23,10 +23,10 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=mysql
+DB_HOST=mysql-shared
 DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=sail
+DB_DATABASE=convenios
+DB_USERNAME=root
 DB_PASSWORD=password
 
 FINANC_DB_HOST=127.0.0.1
