--- a/docker/8.4/Dockerfile
+++ b/docker/8.4/Dockerfile
@@ -91,10 +91,11 @@ RUN useradd -ms /bin/bash --no-user-group -g $WWWGROUP -u 1337 sail
 RUN git config --global --add safe.directory /var/www/html
 
 COPY start-container /usr/local/bin/start-container
+COPY entrypoint.sh /usr/local/bin/entrypoint-storage
 COPY supervisord.conf /etc/supervisor/conf.d/supervisord.conf
 COPY php.ini /etc/php/8.4/cli/conf.d/99-sail.ini
-RUN chmod +x /usr/local/bin/start-container
+RUN chmod +x /usr/local/bin/start-container /usr/local/bin/entrypoint-storage
 
 EXPOSE 80/tcp
 
-ENTRYPOINT ["start-container"]
+ENTRYPOINT ["entrypoint-storage"]
